# peakperf

./: .gitignore  ALTERNATIVE.c  BENCHMARKS.md  BUG.c  CMakeLists.txt  FLOPS.c  Haswell.c  Haswell.h  Knl.c  Knl.h  Makefile  README.md  TODO  build.sh  cpufetch.c  cpufetch.h  freq.sh  getarg.c  getarg.h  intrinsics_multicore.c  knl.c  main.c  peakperf.1  test.c
Arch/: 256_10.c  256_10.h  256_3_nofma.c  256_3_nofma.h  256_5.c  256_5.h  256_5_nofma.c  256_8.c  256_8.h  512_12.c  512_12.h  512_8.c  512_8.h  Arch.c  Arch.h  broadwell.c  broadwell.h  cannon_lake_256.h  cannon_lake_512.c  cannon_lake_512.h  coffe_lake.c  coffe_lake.h  coffee_lake.c  coffee_lake.h  data.h  haswell.c  haswell.h  ice_lake.c  ice_lake.h  ice_lake_256.c  ice_lake_256.h  ice_lake_512.c  ice_lake_512.h  ivy_bridge.c  ivy_bridge.h  kaby_lake.c  kaby_lake.h  knl.h  sandy_bridge.c  sandy_bridge.h  (+9 more)
cpufetch/: cpu.c  cpu.h  uarch.c  uarch.h
src/: benchmark.cpp  benchmark.h  benchmark.hpp  getarg.c  getarg.cpp  getarg.h  getarg.hpp  global.cpp  global.hpp  main.c  main.cpp
src/arch/: arch.c  cannon_lake_256.c  cannon_lake_512.h  ice_lake.h  ivy_bridge.h  skylake_256.h  zen.c  zen2.h
src/cpu/: cpu.c  cpu.cpp  cpu.h
src/cpu/arch/: 128_6.cpp  128_6.hpp  128_8.cpp  128_8.hpp  256_10.cpp  256_10.hpp  256_4.cpp  256_4.hpp  256_5.cpp  256_5.hpp  256_6.cpp  256_6.hpp  256_6_nofma.cpp  256_6_nofma.hpp  256_8.cpp  256_8.hpp  512_12.cpp  512_12.hpp  512_8.cpp  512_8.hpp  airmont.cpp  airmont.hpp  arch.c  arch.cpp  arch.h  arch.hpp  arch_avx.cpp  arch_avx.hpp  arch_avx512.cpp  arch_avx512.hpp  arch_neon.cpp  arch_neon.hpp  arch_sse.cpp  arch_sse.hpp  broadwell.cpp  broadwell.h  broadwell.hpp  cannon_lake_256.cpp  cannon_lake_256.h  cannon_lake_256.hpp  (+38 more)
src/cpu/cpufetch/: cpufetch.c  cpufetch.cpp  cpufetch.hpp  cpuid.c  cpuid.cpp  cpuid.h  cpuid.hpp  uarch.cpp  uarch.h  uarch.hpp
src/cpufetch/: uarch.c  uarch.h
src/gpu/: arch.cu  arch.hpp  gpu.cpp  gpu.cu  gpu.h  kernel.cu  kernel.hpp  kernel_4.cu  kernel_4.hpp  kernel_6.cu  kernel_6.hpp  peakperf_helper_cuda.hpp
src/gpu/arch/: arch.cu  arch.hpp  kernel.cu  kernel.h  kernel.hpp  mad_4.cu  mad_4.hpp  mad_6.cu  mad_6.hpp  maxwell.cu  maxwell.h  maxwell.hpp  turing.cu  turing.hpp
